--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
